--- a/imblanced-classification.ipynb
+++ b/imblanced-classification.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,7 +13,12 @@
     "from collections import Counter\n",
     "from imblearn.under_sampling import RandomUnderSampler\n",
     "from imblearn.over_sampling import SMOTE\n",
-    "from imblearn.combine import SMOTEENN"
+    "from imblearn.combine import SMOTEENN\n",
+    "from numpy import mean\n",
+    "from sklearn.model_selection import RepeatedStratifiedKFold\n",
+    "from sklearn.tree import DecisionTreeClassifier\n",
+    "from sklearn.model_selection import cross_val_score\n",
+    "from imblearn.pipeline import Pipeline"
    ]
   },
   {
@@ -245,6 +250,135 @@
     "model_sensitive.fit(trainX, trainy)\n",
     "yhat_sensitive = model_sensitive.predict(testX)\n",
     "print('F-measure after adding weight to the model: %.3f' % f1_score(testy, yhat_sensitive))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### K-Fold Cross-Validation\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      ">Train: 0=8910, 1=90, Test: 0=990, 1=10\n",
+      ">Train: 0=8910, 1=90, Test: 0=990, 1=10\n",
+      ">Train: 0=8910, 1=90, Test: 0=990, 1=10\n",
+      ">Train: 0=8910, 1=90, Test: 0=990, 1=10\n",
+      ">Train: 0=8910, 1=90, Test: 0=990, 1=10\n",
+      ">Train: 0=8910, 1=90, Test: 0=990, 1=10\n",
+      ">Train: 0=8910, 1=90, Test: 0=990, 1=10\n",
+      ">Train: 0=8910, 1=90, Test: 0=990, 1=10\n",
+      ">Train: 0=8910, 1=90, Test: 0=990, 1=10\n",
+      ">Train: 0=8910, 1=90, Test: 0=990, 1=10\n",
+      ">Train: 0=8910, 1=90, Test: 0=990, 1=10\n",
+      ">Train: 0=8910, 1=90, Test: 0=990, 1=10\n",
+      ">Train: 0=8910, 1=90, Test: 0=990, 1=10\n",
+      ">Train: 0=8910, 1=90, Test: 0=990, 1=10\n",
+      ">Train: 0=8910, 1=90, Test: 0=990, 1=10\n",
+      ">Train: 0=8910, 1=90, Test: 0=990, 1=10\n",
+      ">Train: 0=8910, 1=90, Test: 0=990, 1=10\n",
+      ">Train: 0=8910, 1=90, Test: 0=990, 1=10\n",
+      ">Train: 0=8910, 1=90, Test: 0=990, 1=10\n",
+      ">Train: 0=8910, 1=90, Test: 0=990, 1=10\n",
+      ">Train: 0=8910, 1=90, Test: 0=990, 1=10\n",
+      ">Train: 0=8910, 1=90, Test: 0=990, 1=10\n",
+      ">Train: 0=8910, 1=90, Test: 0=990, 1=10\n",
+      ">Train: 0=8910, 1=90, Test: 0=990, 1=10\n",
+      ">Train: 0=8910, 1=90, Test: 0=990, 1=10\n",
+      ">Train: 0=8910, 1=90, Test: 0=990, 1=10\n",
+      ">Train: 0=8910, 1=90, Test: 0=990, 1=10\n",
+      ">Train: 0=8910, 1=90, Test: 0=990, 1=10\n",
+      ">Train: 0=8910, 1=90, Test: 0=990, 1=10\n",
+      ">Train: 0=8910, 1=90, Test: 0=990, 1=10\n"
+     ]
+    }
+   ],
+   "source": [
+    "\n",
+    "\n",
+    "X, y = make_classification(n_samples=10000, n_features=2, n_redundant=0,\n",
+    "\tn_clusters_per_class=1, weights=[0.99], flip_y=0, random_state=1)\n",
+    "kfold = RepeatedStratifiedKFold(n_splits=10, n_repeats=3, random_state=1)\n",
+    "\n",
+    "for train_ix, test_ix in kfold.split(X, y):\n",
+    "\t# select rows\n",
+    "\ttrain_X, test_X = X[train_ix], X[test_ix]\n",
+    "\ttrain_y, test_y = y[train_ix], y[test_ix]\n",
+    "\t# summarize train and test composition\n",
+    "\ttrain_0, train_1 = len(train_y[train_y==0]), len(train_y[train_y==1])\n",
+    "\ttest_0, test_1 = len(test_y[test_y==0]), len(test_y[test_y==1])\n",
+    "\tprint('>Train: 0=%d, 1=%d, Test: 0=%d, 1=%d' % (train_0, train_1, test_0, test_1))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Mean ROC AUC: 0.771\n"
+     ]
+    }
+   ],
+   "source": [
+    "model = DecisionTreeClassifier()\n",
+    "scores = cross_val_score(model, X, y, scoring='roc_auc', cv=kfold, n_jobs=-1)\n",
+    "print('Mean ROC AUC: %.3f' % mean(scores))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Pipeline for oversampling and undersampling for different k-neighbors"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "> k=1, Mean ROC AUC: 0.825\n",
+      "> k=2, Mean ROC AUC: 0.818\n",
+      "> k=3, Mean ROC AUC: 0.825\n",
+      "> k=4, Mean ROC AUC: 0.838\n",
+      "> k=5, Mean ROC AUC: 0.841\n",
+      "> k=6, Mean ROC AUC: 0.849\n",
+      "> k=7, Mean ROC AUC: 0.851\n"
+     ]
+    }
+   ],
+   "source": [
+    "X, y = make_classification(n_samples=10000, n_features=2, n_redundant=0,\n",
+    "\tn_clusters_per_class=1, weights=[0.99], flip_y=0, random_state=1)\n",
+    "\n",
+    "k_values = [1, 2, 3, 4, 5, 6, 7]\n",
+    "\n",
+    "for k in k_values:\n",
+    "\tmodel = DecisionTreeClassifier()\n",
+    "\tover = SMOTE(sampling_strategy=0.1, k_neighbors=k)\n",
+    "\tunder = RandomUnderSampler(sampling_strategy=0.5)\n",
+    "\tsteps = [('over', over), ('under', under), ('model', model)]\n",
+    "\tpipeline = Pipeline(steps=steps)\n",
+    "\tcv = RepeatedStratifiedKFold(n_splits=10, n_repeats=3, random_state=1)\n",
+    "\tscores = cross_val_score(pipeline, X, y, scoring='roc_auc', cv=cv, n_jobs=-1)\n",
+    "\tscore = mean(scores)\n",
+    "\tprint('> k=%d, Mean ROC AUC: %.3f' % (k, score))"
    ]
   }
  ],
